Hadoop GPL Compression Change log

Trunk:

  COMPRESS-1. Fix build file to reference the right library name. (johan via 
  omalley)